# LogLine-CLI-UI

./: .env.example  .gitignore  .vercelignore  LLM-COMPACT-GUIDE.json  LLM-FULL-GUIDE.json  README.md  REPO_SPLIT.md  drizzle.config.ts  metadata.json  next.config.ts  package-lock.json  package.json
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  page.tsx  providers.tsx
components/brand/: LoglineMark.tsx
components/component-catalog/: BillingDaily.tsx  ChatAI.tsx  ComponentStore.tsx  CounterBadge.tsx  DestinationPicker.tsx  DropZone.tsx  LLMStatus.tsx  ObservabilityHub.tsx  PipelineEditor.tsx  QuickAction.tsx  QuickFiles.tsx  Registry.tsx  SecretField.tsx  ServiceCard.tsx  SmartList.tsx
components/panel/: ComponentRenderer.tsx  FlipPanel.tsx  GridCanvas.tsx  PanelRenderer.tsx  TemplatePrimitives.tsx
components/pwa/: PWARegister.tsx
db/: bootstrap.ts  index.ts  schema.ts  seed.ts
docs/: API_CONTRACTS.md  ARCHITECTURE.md  AUTH_PERMANENT_PLAN.md  BRAND.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  ECOSYSTEM_GREEN_TASKLIST.md  ECOSYSTEM_PHASE0_APPROVED_V1.md  ECOSYSTEM_PHASE0_DECISION_FORM.md  GETTING_STARTED.md  LAB256_AGENT_GATEWAY_RUNBOOK.md  LLM_START_HERE.md  LOGLINE_ECOSYSTEM_NORMATIVE_BASE.md  LOGLINE_OPERATING_POSTURE.md  README.md  ROADMAP.md  SECURITY.md  SETTINGS_CASCADE.md  SYSTEM_GUIDE_ZERO_TO_CONFIDENT.md  TASKLIST_BOARD.md  TASKLIST_LOGLINE_WORLD.md  TEMPLATE_CONTRACT.md  TESTING.md  TROUBLESHOOTING.md  UBLX — Beginner's Guide (Detailed Edit.md  voulezvous-tv-BIG.md
logline/: Cargo.toml  README.md
logline/crates/logline-cli/: Cargo.toml
logline/crates/logline-cli/src/: main.rs
logline/crates/logline-daemon/: Cargo.toml
logline/crates/logline-daemon/src/: main.rs
mocks/: ublx-mocks.ts
public/: sw.js
scripts/: check-template-rules.mjs  migrate-template-front-props.mjs  test-template-contract.mjs
stores/: ui-store.ts
types/: ublx.ts
(+50 files in other folders)
