[package]
name = "logline-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
logline-api = { path = "../logline-api" }
logline-core = { path = "../logline-core" }
logline-runtime = { path = "../logline-runtime" }
